Whisper-RayService.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whisper-streaming
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # Ray Dashboard
      - path: /dashboard/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: whisper-streaming-head-svc
            port:
              number: 8265
      # Ray Serve
      - path: /serve/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: whisper-streaming-serve-svc
            port:
              number: 8000
