ingress-whisper.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whisper-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internal #internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 8000}]'

spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whisper-streaming-serve-svc
            port:
              number: 8000
